# lab-equipment-reservation-poc

./: .env.example  .gitignore  AGENTS.md  Justfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix
backend/: pyproject.toml
backend/src/app/: __init__.py  auth.py  config.py  datetime_util.py  db.py  main.py  pagination.py  reservation_mapping.py
backend/src/app/models/: __init__.py
backend/src/app/routers/: __init__.py  devices.py  reservations.py  users.py
backend/src/app/schemas/: __init__.py
backend/src/app/seeding/: __init__.py  dev_seed.py  device_image_seed.py  keycloak_seed.py  runner.py
backend/src/app/services/: __init__.py  device_image_bytes.py  devices.py  facet_search.py  reservations.py  users.py
backend/src/app/storage/: __init__.py  s3_device_images.py
backend/tests/: jwt_payload_utils.py  test_auth_jwt.py  test_auth_users.py  test_datetime_util.py  test_device_image_bytes.py  test_device_reservations_api.py  test_devices.py  test_devices_api.py  test_facet_search.py  test_keycloak_seed.py  test_models.py  test_reservations_api.py  test_seed_dev.py  test_services.py  test_users_api.py
doc/: README.md  architecture.md  development-guidelines.md  functional-design.md  glossary.md  keycloak-setup.md  local-development.md  product-requirements.md  production-operations.md  repository-structure.md
frontend/: .env.example  .oxlintrc.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: compose.sh  (+2 more)
(+124 files in other folders)
